# adc_data_acquisition

./: Doxyfile  Makefile  README.md
application/: CMakeLists.txt  CPPLINT.cfg  README.md
application/include/: xadc_lib.h
application/src/: main.c  xadc_lib.c
kernel_module/: Makefile  README.md
kernel_module/include/: adc_data_acquisition.h
kernel_module/src/: adc_data_acquisition.c
